--- a/dev/app/home/home.component.html
+++ b/dev/app/home/home.component.html
@@ -6,6 +6,7 @@
 
     <div *ngIf="error" class="error">Error: {{error}}</div>
 
+    <!-- CATEGORIES -->
     <div class="categories_list">
     	<ul *ngIf="standingData.lists.categories" class="list-inline">
 			<li *ngFor="let category of standingData.lists.categories"
@@ -15,6 +16,7 @@
     	</ul>
     </div>
 
+    <!-- CITIES -->
     <div class="cities_list">
         <ul *ngIf="standingData.lists.cities" class="list-inline">
             <li *ngFor="let city of standingData.lists.cities" class="city">
@@ -23,5 +25,39 @@
         </ul>
     </div>
 
+    </div>
+        <!-- ADS -->
+        <div>
+        <div class="container">
+            <div class="text-center">
+                <h2 class="heading">Pager</h2>
+
+                <!-- paged items -->
+                <div *ngFor="let item of pagedItems">Item {{item}}</div>
+
+                <!-- pager -->
+                <ul *ngIf="pager.pages.length" class="pagination">
+                    <li [ngClass]="{ disabled: pager.currentPage === 1 }">
+                        <a (click)="setPage(1)" role="button">First</a>
+                    </li>
+                    <li [ngClass]="{ disabled: pager.currentPage === 1 }">
+                        <a (click)="setPage(pager.currentPage - 1)" role="button">Previous</a>
+                    </li>
+                    <li *ngFor="let page of pager.pages" [ngClass]="{ active: pager.currentPage === page }">
+                        <a (click)="setPage(page)" role="button">{{page}}</a>
+                    </li>
+                    <li [ngClass]="{ disabled: pager.currentPage === pager.totalPages }">
+                        <a (click)="setPage(pager.currentPage + 1)" role="button">Next</a>
+                    </li>
+                    <li [ngClass]="{ disabled: pager.currentPage === pager.totalPages }">
+                        <a (click)="setPage(pager.totalPages)" role="button">Last</a>
+                    </li>
+                    <p>pager.pages.length: {{pager.pages.length}}</p>
+                    <p>pager.pages: {{pager.pages}}</p>
+                    <p>pager.currentPage: {{pager.currentPage}}</p>
+                    <p>pager.totalPages: {{pager.totalPages}}</p>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
