--- a/dev/app/register/register.component.css
+++ b/dev/app/register/register.component.css
@@ -31,8 +31,8 @@ label {
 }
 
 #photo {
-	min-height: 200px;
-	width: auto;
+	padding: 5px 5px 45px 5px;
+	background-color: #eee;
 }
 
 .admin-data {
@@ -57,7 +57,7 @@ label {
 	border: 1px solid #cccccc;
 	float: left;
 
-	min-width: 300px;
-	max-width: 500px;
+	min-width: 200px;
+	max-width: 300px;
 	height: auto;
 }
